# mbs-example-monorepo

./: .gitignore  .mbs-config.json  .mbs-project.json  README.md  mbs.fish  mbs.sh  run.sh
.github/: cache_export.sh  cache_import.sh
.github/workflows/: ci.yml
components/: .gitignore
components/aws_example/infrastructure_terraform_state/: .mbs-build.json  .mbs-deploy.json  run.sh
components/aws_example/infrastructure_via_terraform/: .mbs-build.json  .mbs-deploy.json  main.tf
components/aws_example/localstack/: .mbs-build.json  .mbs-deploy.json  docker-compose.yml
components/aws_example/localstack_wait/: .mbs-build.json  .mbs-deploy.json  wait_localstack.sh
components/c_examples/c_native_binary/: .mbs-build.json  CMakeLists.txt  main.c
components/c_examples/c_shared_library/: .mbs-build.json  CMakeLists.txt  lib.c  lib.h
components/c_examples/c_shared_sub_library/: .mbs-build.json  CMakeLists.txt  sub_lib.c  sub_lib.h
components/docker_examples/docker_app/: .mbs-build.json  .mbs-deploy.json  Dockerfile  hello.sh
components/docker_examples/docker_apps_composition/: .mbs-build.json  .mbs-deploy.json  docker-compose.yml
components/dotnet_examples/fsharp_app/: .mbs-build.json  fsharp_app.fsproj
components/dotnet_examples/fsharp_lib/: .mbs-build.json  fsharp_lib.fsproj
components/elixir_examples/ex_app/: .mbs-build.json  mix.exs
components/elixir_examples/ex_lib/: .mbs-build.json  mix.exs
components/elixir_examples/ex_sublib/: .mbs-build.json  mix.exs
components/js_examples/js_app/: .mbs-build.json  index.js  package-lock.json  package.json  (+1 more)
(+72 files in other folders)
